# polytech-tridiagonal-odd-even-exclusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  collect_code.bash  example.kra  main.py  temp.txt
docs/: lecture_13.ppt  my_solution.odt  tasks.doc
docs/source/: Аппроксимация двумерного эллиптического уравнения в цилиндрической системе координат.doc  Аппроксимация двумерного эллиптического уравнения.doc  Методы сопряжённых градиентов.doc  Основные этапы работы над работой.doc  Постановка задачи и требования к отчёту.doc  Формы хранения разреженных матриц.doc
include/public/: defines.hpp  input_parameters.hpp  interval_splitter.hpp  utils.hpp
include/public/default_impl/: euler_explicit_method.hpp  euler_implicit_method.hpp  main_matrix_calculator.hpp  odd_even_reduction.hpp  rkf_method.hpp
include/public/interface/: i_base_integrate.hpp  i_main_matrix_calculator.hpp
src/: interval_splitter.cc  main.cc  utils.cc
src/default_impl/: euler_explicit_method.cc  euler_implicit_method.cc  main_matrix_calculator.cc  odd_even_reduction.cc  rkf_method.cc
